--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <input type="text" name="Edad del estudiante" placeholder="Codigo del estudiante" required="required" />
 		  <!-- <input type="text" name="Número de hermanos" placeholder="Número de hermanos" required="required" />-->
 
-
+       <a href="https://datastudio.google.com/reporting/367fd3f2-746f-4b81-9abc-e986cf7837b7"> Ir al Dashboard </a>
         <button type="submit" class="btn btn-primary btn-block btn-large">Calcular descuento</button>
     </form>
 
